# Site-Extension-RAG

./: .dockerignore  .gitignore  Dockerfile  LICENSE
backend/: .env.example  pyproject.toml
backend/app/: config.py  logging_config.py  main.py
backend/app/api/: __init__.py  chat.py  errors.py  evals.py  ingest.py
backend/app/chunking/: __init__.py  chunker.py
backend/app/crawl/: __init__.py  crawler.py  models.py  security.py
backend/app/db/: __init__.py  connection.py
backend/app/evals/: __init__.py  correctness.py  faithfulness.py  runner.py
backend/app/extract/: __init__.py  html.py
backend/app/index/: __init__.py  embeddings.py  service.py  vector_index.py
backend/app/jobs/: __init__.py  manager.py  models.py
backend/app/rag/: __init__.py  generation.py  service.py
backend/app/retrieval/: __init__.py  models.py  service.py  vector_store.py
backend/app/workspace/: __init__.py  builder.py  models.py  store.py
backend/evals/: README.md  __init__.py  config.py  dump_chunks.py  generate_fixture_embeddings.py  langsmith_eval.py  loader.py  schema.py  upload_datasets.py
backend/evals/datasets/: qa.jsonl  retrieval.jsonl
backend/evals/fixtures/: manifest.json  query_embeddings.json
backend/tests/: conftest.py  test_characterization_contract.py  test_chat_api.py  test_chunking.py  test_config.py  test_cors.py  test_crawl_boundaries.py  test_eval_fixtures.py  test_evals.py  test_evals_api.py  test_evals_offline.py  test_extension_static.py  test_extract.py  test_generation.py  test_health.py  test_index.py  test_ingest_api.py  test_langchain_clients.py  test_rag_grounding.py  test_rag_service.py  test_retrieval.py  test_sparse_retrieval.py  test_vector_store.py
backend/tests/fixtures/: characterization_corpus.json
extension/: manifest.json  (+3 more)
(+6 files in other folders)
